# tbl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: color.rs  datetime.rs  multiline.rs  plain.rs  unicode.rs
src/: blocks.rs  builder.rs  interval.rs  lib.rs  rendering.rs
tests/: tests.rs
