[package]
name = "tbl"
version = "1.0.0-alpha"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"
repository = "https://github.com/PicoJr/tbl"
description = "display timelines in terminal"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["timeline", "interval", "bar", "lib"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "img/timeline.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
thiserror = "1.0"

# only required for the examples
[dev-dependencies]
termion = "1.5.5"
chrono = "0.4.11"
